--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   flutter_svg: ^2.0.6
   firebase_storage: ^11.2.2
   get_storage: ^2.1.1
+  image_picker: ^0.8.7+5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
