--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   firebase_storage: ^11.2.2
   get_storage: ^2.1.1
   image_picker: ^0.8.7+5
+  flutter_speed_dial: ^7.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
